tests/expected_output/unknown_type_name_define/000000-clang-13.0-x86_64-pc-linux-gnu.txt
tests/extracted_compile_time_errors/unknown_type_name_define.c:1:1: error: unknown type name 'define'
define X 42
^
dcc explanation: you appear to have left out a '#'.
Use #define to define a constant, for example: #define PI 3.14159
